sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:9: error: '(' expected but identifier found.
      if plusPetit(i+1,i) {
         ^AlgCocktailSort2:15: error: ')' expected but ',' found.
    for (i<-debut,fin) {
                 ^AlgCocktailSort2:23: error: illegal start of simple expression
  } while (mem==0)
  ^